# jupyter_extension_demo

./: .gitignore  Makefile  pyproject.toml
demo/: README.md  debugger_demo.py  plantuml_demo.md
